@@ -3542,7 +3542,7 @@ diese Einstellung vor!  \tty{FULLPMMU} mu"s also auf jeden Fall nach dem
 \subsection{PADDING}
 \ttindex{PADDING}
 
-{\em G"ultigkeit: 680x0, M*Core, XA, H8, SH7000, TMS9900, MSP430, ST7}
+{\em G"ultigkeit: 680x0, 68xx, M*Core, XA, H8, SH7000, TMS9900, MSP430, ST7}
 
 Prozessoren der 680x0-Familie stehen ungeraden Adressen ziemlich
 kritisch gegen"uber: Befehle d"urfen nicht auf einer ungeraden Adresse
