@@ -32,7 +32,7 @@ ADR        \> BYT         \> DC[.$<$size$>$] \> DFS     \> DS[.$<$size$>$]
 FCB        \> FCC         \> FDB         \> PADDING     \> RMB \\
 \end{tabbing}}
 
-\subsubsection{Motorola 68xx/Hitachi 6309}
+\subsubsection{Motorola 68xx/Hitachi 63xx}
 {\tt\begin{tabbing}
 \hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\kill
 ADR        \> BYT         \> DC[.$<$size$>$] \> DFS     \> DS[.$<$size$>$] \\
@@ -42,15 +42,16 @@ FCB        \> FCC         \> FDB         \> PADDING     \> RMB \\
 \subsubsection{Motorola/Freescale 6805/68HC(S)08}
 {\tt\begin{tabbing}
 \hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\kill
-ADR        \> BYT         \> DFS         \> FCB         \> FCC \\
-FDB        \> RMB \\
+ADR        \> BYT         \> DC[.$<$size$>$] \> DFS     \> DS[.$<$size$>$] \\
+FCB        \> FCC         \> FDB         \> PADDING     \> RMB \\
 \end{tabbing}}
 
 \subsubsection{Motorola 6809/Hitachi 6309}
 {\tt\begin{tabbing}
 \hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\kill
-ADR        \> ASSUME      \> BYT         \> DFS         \> FCB \\
-FCC        \> FDB         \> RMB \\
+ADR        \> ASSUME      \> BYT         \> DC[.$<$size$>$] \\
+DFS        \> DS[.$<$size$>$] \> FCB     \> FCC \\
+FDB         \> PADDING     \> RMB \\
 \end{tabbing}}
 
 \subsubsection{Motorola 68HC12}
@@ -71,8 +72,8 @@ RMB \\
 \subsubsection{Freescale 68RS08}
 {\tt\begin{tabbing}
 \hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\kill
-ADR        \> BYT         \> DFS         \> FCB         \> FCC \\
-FDB        \> RMB \\
+ADR        \> ASSUME      \> BYT         \> DC[.$<$size$>$] \> DFS \\
+DS[.$<$size$>$] FCB       \> FCC         \> FDB         \> PADDING \\
 \end{tabbing}}
 
 \subsubsection{Hitachi H8/300(L/H)}
