@@ -3451,7 +3451,7 @@ instruction!
 \subsection{PADDING}
 \ttindex{PADDING}
 
-{\em valid for: 680x0, M*Core, XA, H8, SH7000, MSP430, TMS9900, ST7}
+{\em valid for: 680x0, 68xx, M*Core, XA, H8, SH7000, MSP430, TMS9900, ST7}
 
 Processors of the 680x0 family are quite critical regarding odd addresses:
 instructions must not start on an odd address, and data accesses to odd
