@@ -1,0 +1,5 @@
++--------------------- Test Application LONGLINE ----------------------------+
+|                                                                            |
+|      This is a test regarding (over)long source lines                      |
+|                                                                            |
++----------------------------------------------------------------------------+
